--- a/portfolio.html
+++ b/portfolio.html
@@ -14,25 +14,48 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header-wrapper container">
-      <div class="secondaryFont">
-        <span class="logo-left"> <a href="#">Web</a></span>
-        <span class="logo-right"> <a href="#">Studio</a></span>
-      </div>
-      <nav>
-        <ul class="menu">
-          <li><a href="#">Agencja</a></li>
-          <li><a href="../goit-markup-hw-03/portfolio.html">Portfolio</a></li>
-          <li><a href="#">Kontakt</a></li>
-        </ul>
-      </nav>
-      <div>
-        <ul class="menu-contact">
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+48 111 111 111">+48 111 111 111</a></li>
-        </ul>
+    <header class="header-wrapper">
+      <div class="container header-wrapper">
+        <div class="secondaryFont">
+          <span class="logo-left"> <a href="#">Web</a></span>
+          <span class="logo-right"> <a href="#">Studio</a></span>
+        </div>
+        <div>
+          <ul class="menu">
+            <li><a href="#">Agencja</a></li>
+            <li><a href="../goit-markup-hw-03/portfolio.html">Portfolio</a></li>
+            <li><a href="#">Kontakt</a></li>
+          </ul>
+        </div>
+        <div>
+          <ul class="menu-contact">
+            <li><a href="mailto:info@example.com">info@example.com</a></li>
+            <li><a href="tel:+48 111 111 111">+48 111 111 111</a></li>
+          </ul>
+        </div>
       </div>
     </header>
+    <!-- <header>
+      <div class="header-wrapper container">
+        <div>
+          <span class="logo-left"> <a href="#">Web</a></span>
+          <span class="logo-right"> <a href="#">Studio</a></span>
+        </div>
+        <nav>
+          <ul class="menu">
+            <li><a href="#">Agencja</a></li>
+            <li><a href="../goit-markup-hw-03/portfolio.html">Portfolio</a></li>
+            <li><a href="#">Kontakt</a></li>
+          </ul>
+        </nav>
+        <div>
+          <ul class="menu-contact">
+            <li><a href="mailto:info@example.com">info@example.com</a></li>
+            <li><a href="tel:+48 111 111 111">+48 111 111 111</a></li>
+          </ul>
+        </div>
+      </div>
+    </header> -->
 
     <main>
       <div>
