--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <title>Web Studio - Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,8 +18,12 @@
       <div class="container header-wrapper">
         <div class="menu-wrapper">
           <div class="secondaryFont">
-            <span class="logo-left"> <a href="#">Web</a></span>
-            <span class="logo-right"> <a href="#">Studio</a></span>
+            <span class="logo-left">
+              <a href="../goit-markup-hw-03/index.html">Web</a></span
+            >
+            <span class="logo-right">
+              <a href="../goit-markup-hw-03/index.html">Studio</a></span
+            >
           </div>
           <nav>
             <ul class="menu">
@@ -157,8 +161,12 @@
     <footer>
       <div class="container">
         <div class="secondaryFont">
-          <span class="logo-left"> <a href="#">Web</a></span>
-          <span class="logo-right-footer"> <a href="#">Studio</a></span>
+          <span class="logo-left">
+            <a href="../goit-markup-hw-03/index.html">Web</a></span
+          >
+          <span class="logo-right-footer">
+            <a href="../goit-markup-hw-03/index.html">Studio</a></span
+          >
         </div>
         <address>m. Warszawa, Aleje Jerozolimskie 21</address>
 
