--- a/index.html
+++ b/index.html
@@ -81,65 +81,69 @@
           </li>
         </ul>
       </div>
-      <section class="container">
-        <h2>Czym się zajmujemy</h2>
-        <ul class="hp3-wrapper">
-          <li>
-            <img
-              src="./images/photo_work_01.jpg"
-              width="370"
-              alt="Klawiatura"
-            />
-          </li>
-          <li>
-            <img src="./images/photo_work_02.jpg" width="370" alt="Telefon" />
-          </li>
-          <li>
-            <img src="./images/photo_work_03.jpg" width="370" alt="Tablet" />
-          </li>
-        </ul>
-      </section>
-      <div class="team">
-        <section class="container">
-          <h2>Nasz zespół</h2>
+      <section>
+        <div class="container">
+          <h2>Czym się zajmujemy</h2>
           <ul class="hp3-wrapper">
-            <li class="worker">
+            <li>
               <img
-                src="./images/photo_team_01.jpg"
-                width="270"
-                alt="Product Designer"
+                src="./images/photo_work_01.jpg"
+                width="370"
+                alt="Klawiatura"
               />
-              <div class="name">John Doe</div>
-              <div class="position">Product Designer</div>
             </li>
-            <li class="worker">
-              <img
-                src="./images/photo_team_02.jpg"
-                width="270"
-                alt="Frontend Developer"
-              />
-              <div class="name">John Doe</div>
-              <div class="position">Frontend Developer</div>
+            <li>
+              <img src="./images/photo_work_02.jpg" width="370" alt="Telefon" />
             </li>
-            <li class="worker">
-              <img
-                src="./images/photo_team_03.jpg"
-                width="270"
-                alt="Marketing"
-              />
-              <div class="name">John Doe</div>
-              <div class="position">Marketing</div>
-            </li>
-            <li class="worker">
-              <img
-                src="./images/photo_team_04.jpg"
-                width="270"
-                alt="UI Designer"
-              />
-              <div class="name">John Doe</div>
-              <div class="position">UI Designer</div>
+            <li>
+              <img src="./images/photo_work_03.jpg" width="370" alt="Tablet" />
             </li>
           </ul>
+        </div>
+      </section>
+      <div class="team">
+        <section>
+          <div class="container">
+            <h2>Nasz zespół</h2>
+            <ul class="hp3-wrapper">
+              <li class="worker">
+                <img
+                  src="./images/photo_team_01.jpg"
+                  width="270"
+                  alt="Product Designer"
+                />
+                <div class="name">John Doe</div>
+                <div class="position">Product Designer</div>
+              </li>
+              <li class="worker">
+                <img
+                  src="./images/photo_team_02.jpg"
+                  width="270"
+                  alt="Frontend Developer"
+                />
+                <div class="name">John Doe</div>
+                <div class="position">Frontend Developer</div>
+              </li>
+              <li class="worker">
+                <img
+                  src="./images/photo_team_03.jpg"
+                  width="270"
+                  alt="Marketing"
+                />
+                <div class="name">John Doe</div>
+                <div class="position">Marketing</div>
+              </li>
+              <li class="worker">
+                <img
+                  src="./images/photo_team_04.jpg"
+                  width="270"
+                  alt="UI Designer"
+                />
+                <div class="name">John Doe</div>
+                <div class="position">UI Designer</div>
+              </li>
+            </ul>
+          </div>
         </section>
       </div>
     </main>
