--- a/portfolio.html
+++ b/portfolio.html
@@ -64,98 +64,100 @@
           </li>
         </ul>
       </div>
-      <ul class="work-wrapper container">
-        <li class="work">
-          <img
-            src="./images/portfolio1.jpg"
-            width="370"
-            height="294"
-            alt="Portfolio 01"
-          />
-          <div class="name-project">Technocrack</div>
-          <div class="type-project">Strona internetowa</div>
-        </li>
-        <li class="work">
-          <img
-            src="./images/portfolio2.jpg"
-            width="370"
-            height="294"
-            alt="Portfolio 02"
-          />
-          <div class="name-project">Grafika New Orlean vs Golden Star</div>
-          <div class="type-project">Dizajn</div>
-        </li>
-        <li class="work">
-          <img
-            src="./images/portfolio3.jpg"
-            width="370"
-            height="294"
-            alt="Portfolio 03"
-          />
-          <div class="name-project">Restauracja Seafood</div>
-          <div class="type-project">Aplikacja</div>
-        </li>
-        <li class="work">
-          <img
-            src="./images/portfolio4.jpg"
-            width="370"
-            height="294"
-            alt="Portfolio 04"
-          />
-          <div class="name-project">Projekt Prime</div>
-          <div class="type-project">Marketing</div>
-        </li>
-        <li class="work">
-          <img
-            src="./images/portfolio5.jpg"
-            width="370"
-            height="294"
-            alt="Portfolio 05"
-          />
-          <div class="name-project">Projekt Boxes</div>
-          <div class="type-project">Aplikacja</div>
-        </li>
-        <li class="work">
-          <img
-            src="./images/portfolio6.jpg"
-            width="370"
-            height="294"
-            alt="Portfolio 06"
-          />
-          <div class="name-project">Inspiration has no Borders</div>
-          <div class="type-project">Strona internetowa</div>
-        </li>
-        <li class="work">
-          <img
-            src="./images/portfolio7.jpg"
-            width="370"
-            height="294"
-            alt="Portfolio 07"
-          />
-          <div class="name-project">Magazyn Limited Edition</div>
-          <div class="type-project">Dizajn</div>
-        </li>
-        <li class="work">
-          <img
-            src="./images/portfolio8.jpg"
-            width="370"
-            height="294"
-            alt="Portfolio 08"
-          />
-          <div class="name-project">Projekt LAB</div>
-          <div class="type-project">Marketing</div>
-        </li>
-        <li class="work">
-          <img
-            src="./images/portfolio9.jpg"
-            width="370"
-            height="294"
-            alt="Portfolio 09"
-          />
-          <div class="name-project">Growing Business</div>
-          <div class="type-project">Aplikacja</div>
-        </li>
-      </ul>
+      <section>
+        <ul class="work-wrapper container">
+          <li class="work">
+            <img
+              src="./images/portfolio1.jpg"
+              width="370"
+              height="294"
+              alt="Portfolio 01"
+            />
+            <div class="name-project">Technocrack</div>
+            <div class="type-project">Strona internetowa</div>
+          </li>
+          <li class="work">
+            <img
+              src="./images/portfolio2.jpg"
+              width="370"
+              height="294"
+              alt="Portfolio 02"
+            />
+            <div class="name-project">Grafika New Orlean vs Golden Star</div>
+            <div class="type-project">Dizajn</div>
+          </li>
+          <li class="work">
+            <img
+              src="./images/portfolio3.jpg"
+              width="370"
+              height="294"
+              alt="Portfolio 03"
+            />
+            <div class="name-project">Restauracja Seafood</div>
+            <div class="type-project">Aplikacja</div>
+          </li>
+          <li class="work">
+            <img
+              src="./images/portfolio4.jpg"
+              width="370"
+              height="294"
+              alt="Portfolio 04"
+            />
+            <div class="name-project">Projekt Prime</div>
+            <div class="type-project">Marketing</div>
+          </li>
+          <li class="work">
+            <img
+              src="./images/portfolio5.jpg"
+              width="370"
+              height="294"
+              alt="Portfolio 05"
+            />
+            <div class="name-project">Projekt Boxes</div>
+            <div class="type-project">Aplikacja</div>
+          </li>
+          <li class="work">
+            <img
+              src="./images/portfolio6.jpg"
+              width="370"
+              height="294"
+              alt="Portfolio 06"
+            />
+            <div class="name-project">Inspiration has no Borders</div>
+            <div class="type-project">Strona internetowa</div>
+          </li>
+          <li class="work">
+            <img
+              src="./images/portfolio7.jpg"
+              width="370"
+              height="294"
+              alt="Portfolio 07"
+            />
+            <div class="name-project">Magazyn Limited Edition</div>
+            <div class="type-project">Dizajn</div>
+          </li>
+          <li class="work">
+            <img
+              src="./images/portfolio8.jpg"
+              width="370"
+              height="294"
+              alt="Portfolio 08"
+            />
+            <div class="name-project">Projekt LAB</div>
+            <div class="type-project">Marketing</div>
+          </li>
+          <li class="work">
+            <img
+              src="./images/portfolio9.jpg"
+              width="370"
+              height="294"
+              alt="Portfolio 09"
+            />
+            <div class="name-project">Growing Business</div>
+            <div class="type-project">Aplikacja</div>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
