--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize/modern-normalize.css"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -49,38 +53,40 @@
         <h1>EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU</h1>
         <button type="button" class="button-hp">Zamów usługę</button>
       </div>
-      <div class="container">
-        <ul class="hp-wrapper">
-          <li>
-            <h4 class="hp-first">LOREM IPSUM</h4>
-            <p class="description-first">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h4 class="hp-first">LOREM IPSUM</h4>
-            <p class="description-first">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h4 class="hp-first">LOREM IPSUM</h4>
-            <p class="description-first">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h4 class="hp-first">LOREM IPSUM</h4>
-            <p class="description-first">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-        </ul>
-      </div>
+      <section class="lorem">
+        <div class="container">
+          <ul class="hp-wrapper">
+            <li>
+              <h4 class="hp-first">LOREM IPSUM</h4>
+              <p class="description-first">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h4 class="hp-first">LOREM IPSUM</h4>
+              <p class="description-first">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h4 class="hp-first">LOREM IPSUM</h4>
+              <p class="description-first">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h4 class="hp-first">LOREM IPSUM</h4>
+              <p class="description-first">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
       <section>
         <div class="container">
           <h2>Czym się zajmujemy</h2>
@@ -101,51 +107,49 @@
           </ul>
         </div>
       </section>
-      <div class="team">
-        <section>
-          <div class="container">
-            <h2>Nasz zespół</h2>
-            <ul class="hp3-wrapper">
-              <li class="worker">
-                <img
-                  src="./images/photo_team_01.jpg"
-                  width="270"
-                  alt="Product Designer"
-                />
-                <div class="name">John Doe</div>
-                <div class="position">Product Designer</div>
-              </li>
-              <li class="worker">
-                <img
-                  src="./images/photo_team_02.jpg"
-                  width="270"
-                  alt="Frontend Developer"
-                />
-                <div class="name">John Doe</div>
-                <div class="position">Frontend Developer</div>
-              </li>
-              <li class="worker">
-                <img
-                  src="./images/photo_team_03.jpg"
-                  width="270"
-                  alt="Marketing"
-                />
-                <div class="name">John Doe</div>
-                <div class="position">Marketing</div>
-              </li>
-              <li class="worker">
-                <img
-                  src="./images/photo_team_04.jpg"
-                  width="270"
-                  alt="UI Designer"
-                />
-                <div class="name">John Doe</div>
-                <div class="position">UI Designer</div>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
+      <section class="team">
+        <div class="container">
+          <h2>Nasz zespół</h2>
+          <ul class="hp3-wrapper">
+            <li class="worker">
+              <img
+                src="./images/photo_team_01.jpg"
+                width="270"
+                alt="Product Designer"
+              />
+              <div class="name">John Doe</div>
+              <div class="position">Product Designer</div>
+            </li>
+            <li class="worker">
+              <img
+                src="./images/photo_team_02.jpg"
+                width="270"
+                alt="Frontend Developer"
+              />
+              <div class="name">John Doe</div>
+              <div class="position">Frontend Developer</div>
+            </li>
+            <li class="worker">
+              <img
+                src="./images/photo_team_03.jpg"
+                width="270"
+                alt="Marketing"
+              />
+              <div class="name">John Doe</div>
+              <div class="position">Marketing</div>
+            </li>
+            <li class="worker">
+              <img
+                src="./images/photo_team_04.jpg"
+                width="270"
+                alt="UI Designer"
+              />
+              <div class="name">John Doe</div>
+              <div class="position">UI Designer</div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <footer>
